--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,12 @@
-set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
-set(CUPS_SRC_DIR ${SRC_DIR}/cups-2.1.1)
-set(UNICODE_SRC_DIR ${SRC_DIR}/unicode)
-
-find_library(CUPS_LIB cups REQUIRED)
-find_library(CUPSIMAGE_LIB cupsimage REQUIRED)
-
-include_directories(${SRC_DIR} ${CUPS_SRC_DIR} ${UNICODE_SRC_DIR})
+cmake_minimum_required(VERSION 3.25)
 
 add_executable(test-rastertokpsl
         example.c
         test_unicode.c
-        ${UNICODE_SRC_DIR}/ConvertUTF.c
         test_halfton.c
-        # ${SRC_DIR}/halfton.c
         main.c)
-# add_definitions ("-Wundefined-internal")
-# target_link_libraries(rastertokpsl-re ${CUPS_LIB} ${CUPSIMAGE_LIB})
+
+target_link_libraries(test-rastertokpsl PRIVATE ${CUPS_LIB} ${CUPSIMAGE_LIB} unicode)
+
+# TODO: Fix hardcoded paths
+target_include_directories(test-rastertokpsl PRIVATE ../src ../src/cups-2.1.1)
