Small cmake fixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,27 +1,21 @@
 cmake_minimum_required(VERSION 3.25)
 
-find_library(CUPS_LIB cups REQUIRED)
-find_library(CUPSIMAGE_LIB cupsimage REQUIRED)
+find_library(cups cups REQUIRED)
+find_library(cupsimage cupsimage REQUIRED)
 
 add_subdirectory(unicode)
+add_subdirectory(libjbig)
 
-add_executable(rastertokpsl rastertokpsl.c
-        halfton.c
-        libjbig/jbig.c
-        libjbig/jbig_ar.c
-        main.c)
+add_library(rastertokpsl_base OBJECT
+        rastertokpsl.c
+        halfton.c)
 
-set_target_properties(rastertokpsl PROPERTIES CXX_STANDARD 20
-        C_STANDARD 17)
-target_include_directories(rastertokpsl SYSTEM AFTER PRIVATE cups-2.1.1)
+target_include_directories(rastertokpsl_base SYSTEM AFTER PUBLIC cups-2.1.1)
+target_include_directories(rastertokpsl_base PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(rastertokpsl PRIVATE ${CUPS_LIB} ${CUPSIMAGE_LIB} unicode)
+add_executable(rastertokpsl main.c)
 
-target_compile_options(rastertokpsl PRIVATE
-        # TODO: add -Werror
-        $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>
-        $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>>:-Wall -Wextra -Wpedantic>
-)
+target_link_libraries(rastertokpsl PRIVATE rastertokpsl_base cupsimage cups unicode libjbig)
 
 # See https://github.com/tensorflow/tensorflow/issues/1171
 target_link_options(rastertokpsl PRIVATE "-lm")
