--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.25)
 
 add_executable(test-rastertokpsl
+        main.c
         example.c
         test_unicode.c
-        test_halfton.c
-        main.c)
+        test_halfton.c)
 
-target_link_libraries(test-rastertokpsl PRIVATE ${CUPS_LIB} ${CUPSIMAGE_LIB} unicode)
-
-# TODO: Fix hardcoded paths
-target_include_directories(test-rastertokpsl PRIVATE ../src ../src/cups-2.1.1)
+target_link_libraries(test-rastertokpsl PRIVATE rastertokpsl_base cups cupsimage unicode)
