Docker fixed .build dir

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ COPY . /app
 
 # Build the project using CMakePresets.json
 RUN cmake --preset=Release
-RUN cmake --build build/release --config Release
+RUN cmake --build .build/release --config Release
 
 # Set the entrypoint to an interactive shell
 CMD ["/bin/bash"]
