tested driver and refactored cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(rastertokpsl
+project(raster_to_kpsl
         VERSION 1.0.0
         DESCRIPTION "A revered engineered Kyocera tool to convert raster images to KPSL format"
         LANGUAGES C CXX)
@@ -11,9 +11,7 @@ find_package(clang_format CONFIG REQUIRED)
 find_package(clang_tidy CONFIG REQUIRED)
 find_package(cpplint CONFIG REQUIRED)
 
-option(BUILD_TESTS "Build tests" ON)
-option(USE_CPM "Use Cmake Package Manager" ON)
-
+option(USE_CPM "Use cpm (cmake package manager) - https://github.com/cpm-cmake/CPM.cmake" ON)
 if (USE_CPM)
     include(cmake/CPM.cmake)
 endif ()
@@ -21,7 +19,8 @@ endif ()
 add_subdirectory(src)
 add_subdirectory(scripts)
 
+option(BUILD_TESTS "Build tests" ON)
 if (BUILD_TESTS)
-    enable_testing()
+    include(CTest)
     add_subdirectory(test)
 endif ()
