--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,10 @@ if (BUILD_TESTS)
 endif ()
 
 # todo: make main.cxx work without wrapper
+# now we should copy the wrapper to usr/lib/cups/filter
+# and make it named rastertokpsl
 install(TARGETS rastertokpsl
+        ARCHIVE DESTINATION /usr/lib/cups/filter
         RUNTIME DESTINATION /usr/lib/cups/filter
 )
 
