--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ target_include_directories(rastertokpsl_core PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 add_executable(rastertokpsl main.c)
 target_link_libraries(rastertokpsl PRIVATE rastertokpsl_core)
+target_link_libraries(rastertokpsl PRIVATE m)
 
 install(
     TARGETS rastertokpsl
