--- a/src/unicode/CMakeLists.txt
+++ b/src/unicode/CMakeLists.txt
@@ -3,4 +3,9 @@ cmake_minimum_required(VERSION 3.20)
 add_library(unicode OBJECT)
 
 target_sources(unicode PRIVATE ConvertUTF.c)
-target_include_directories(unicode SYSTEM AFTER PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(
+    unicode
+    SYSTEM
+    AFTER
+    PUBLIC ${CMAKE_CURRENT_LIST_DIR}
+)
