Add test suite for rastertokpsl conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_subdirectory(scripts)
 option(BUILD_TESTS "Build tests" ON)
 if(BUILD_TESTS)
     include(CTest)
+    add_subdirectory(tests)
 endif()
