--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,18 @@ find_library(cupsimage cupsimage REQUIRED)
 add_subdirectory(unicode)
 add_subdirectory(libjbig)
 
-add_library(rastertokpsl_core STATIC rastertokpsl.c halfton.c)
-target_link_libraries(rastertokpsl_core PRIVATE cupsimage cups unicode libjbig)
+add_library(halftone STATIC halfton.cxx)
+target_include_directories(halftone PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+set_target_properties(
+    halftone
+    PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO
+)
+
+add_library(rastertokpsl_core STATIC rastertokpsl.c)
+target_link_libraries(
+    rastertokpsl_core
+    PRIVATE cupsimage cups unicode libjbig halftone
+)
 target_include_directories(rastertokpsl_core PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 add_executable(rastertokpsl main.cxx)
