--- a/proprietary/CMakeLists.txt
+++ b/proprietary/CMakeLists.txt
@@ -10,11 +10,19 @@ foreach(_file wrapper.sh rastertokpsl-x32 rastertokpsl-x64)
     endif()
 endforeach()
 
-# Install wrapper.sh as rastertokpsl
+cpack_add_component(
+    proprietary_runtime
+    DISPLAY_NAME "Proprietary Runtime"
+    DESCRIPTION "Kyocera rastertokpsl wrapper and binaries"
+    REQUIRED
+)
+
+# Install wrapper.sh as rastertokpsl (runtime component)
 install(
     PROGRAMS "${CMAKE_CURRENT_LIST_DIR}/wrapper.sh"
     DESTINATION lib/cups/filter
     RENAME rastertokpsl
+    COMPONENT proprietary_runtime
     PERMISSIONS
         OWNER_READ
         OWNER_WRITE
@@ -25,11 +33,12 @@ install(
         WORLD_EXECUTE
 )
 
-# Install rastertokpsl-x32 binary
+# Install rastertokpsl-x32 binary (runtime component)
 install(
     PROGRAMS "${CMAKE_CURRENT_LIST_DIR}/rastertokpsl-x32"
     DESTINATION lib/cups/filter
     RENAME rastertokpsl-x32
+    COMPONENT proprietary_runtime
     PERMISSIONS
         OWNER_READ
         OWNER_WRITE
@@ -40,11 +49,12 @@ install(
         WORLD_EXECUTE
 )
 
-# Install rastertokpsl-x64 binary
+# Install rastertokpsl-x64 binary (runtime component)
 install(
     PROGRAMS "${CMAKE_CURRENT_LIST_DIR}/rastertokpsl-x64"
-    DESTINATION /usr/lib/cups/filter
+    DESTINATION lib/cups/filter
     RENAME rastertokpsl-x64
+    COMPONENT proprietary_runtime
     PERMISSIONS
         OWNER_READ
         OWNER_WRITE
