--- a/kyocera_drivers.desktop
+++ b/kyocera_drivers.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=Kyocera Raster Filter
 GenericName=Kyocera Print Filter
-Comment=High-performance Kyocera rastertokpsl print filter for CUPS
+Comment=High-performance Kyocera rastertokpsl print filter for CUPS. Supports Kyocera GDI printers on Linux. Fast, reliable, and secure.
 Exec=rastertokpsl %F
 Icon=icon
 Terminal=false
@@ -10,3 +10,13 @@ Categories=Utility;Printing;System;
 MimeType=application/pdf;image/pwg-raster;image/urf;
 Keywords=kyocera;printer;filter;cups;raster;gdi;linux;ppd;driver;
 StartupNotify=true
+Actions=About;Help;
+
+[Desktop Action About]
+Name=About Kyocera Raster Filter
+Exec=xdg-open https://yourdocs.example.com/kyocera
+
+[Desktop Action Help]
+Name=Get Help
+Exec=xdg-open https://yourdocs.example.com/kyocera/help
+
